# fiuba-taller2-tallerify-app-server

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.travis  Doxyfile  Makefile  README.md  conf.py  coverage.sh  cpplint.py  docker-compose.yml  index.rst
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/doc/rst/: response.doctree  server.doctree
_build/doctrees/src/api/networking/: server.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/doc/rst/: response.html  server.html
_build/html/src/api/networking/: server.html
cmake/: CodeCoverage.cmake  Coveralls.cmake
doc/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/.doctrees/: environment.pickle  index.doctree
doc/.doctrees/doc/rst/: controller.doctree  json_response.doctree  mongo_dao.doctree  ping_controller.doctree  request.doctree  response.doctree  server.doctree  track.doctree  tracks_controller.doctree
doc/_sources/: index.rst.txt
doc/_sources/doc/rst/: controller.rst.txt  ping_controller.rst.txt  response.rst.txt  server.rst.txt
doc/doc/rst/: controller.html  json_response.html  mongo_dao.html  ping_controller.html  request.html  response.html  server.html  track.html  tracks_controller.html
doc/html/: _constants_8h.html  _constants_8h_source.html  _controller_8h.html  _controller_8h_source.html  _controller_test_8h_source.html  _j_s_o_n_response_8h.html  _j_s_o_n_response_8h_source.html  _j_s_o_n_response_test_8h_source.html  _mocks_8h_source.html  _mongo_dao_8h.html  _mongo_dao_8h_source.html  _ping_controller_8h.html  _ping_controller_8h_source.html  _ping_controller_test_8h_source.html  _play_controller_8h.html  _play_controller_8h_source.html  _request_8h.html  _request_8h_source.html  _request_handler_8h_source.html  _request_test_8h_source.html  _response_8h.html  _response_8h_source.html  _server_8h.html  _server_8h_source.html  _server_test_8h_source.html  _stream_response_8h_source.html  _track_8h.html  _track_8h_source.html  _tracks_controller_8h.html  _tracks_controller_8h_source.html  android__sink_8h_source.html  annotated.html  ansicolor__sink_8h_source.html  async__log__helper_8h_source.html  async__logger_8h_source.html  async__logger__impl_8h_source.html  base__sink_8h_source.html  class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  (+2055 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_16.js  classes_17.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+42 more)
doc/rst/: json_response.rst  mongo_dao.rst  request.rst  track.rst  tracks_controller.rst
doc/xml/: _constants_8h.xml  _controller_8cpp.xml  _controller_8h.xml  _j_s_o_n_response_8cpp.xml  _j_s_o_n_response_8h.xml  _mongo_dao_8cpp.xml  _mongo_dao_8h.xml  _ping_controller_8cpp.xml  _ping_controller_8h.xml  _play_controller_8cpp.xml  _play_controller_8h.xml  _r_e_a_d_m_e_8md.xml  _request_8cpp.xml  _request_8h.xml  _response_8cpp.xml  _response_8h.xml  _server_8cpp.xml  _server_8h.xml  _stream_response_8cpp.xml  _stream_response_8h.xml  _track_8cpp.xml  _track_8h.xml  _tracks_controller_8cpp.xml  _tracks_controller_8h.xml  class_controller.xml  class_j_s_o_n_response.xml  class_mongo_dao.xml  class_ping_controller.xml  class_play_controller.xml  class_request.xml  class_response.xml  class_server.xml  class_stream_response.xml  class_track.xml  class_tracks_controller.xml  conf_8py.xml  dir_042ed6d28a050727846a19dfd1c505f7.xml  dir_175a49cec7332852173394a8d0b0c489.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_8b6e38dc502e2065e939ec54ad198025.xml  (+9 more)
ext/gtest/: CMakeLists.txt
include/base64/: base64.cpp  base64.h
include/jsoncpp/: jsoncpp.cpp
include/mongoose/: RequestHandler.h  mongoose.c  mongoose.h
include/spdlog/fmt/bundled/: format.h
src/api/: main.cpp
src/api/config/: Constants.h
src/api/controllers/: Controller.cpp  Controller.h  PingController.cpp  PingController.h  PlayController.cpp  PlayController.h  TracksController.cpp  TracksController.h
src/api/dao/: MongoDao.cpp  MongoDao.h
src/api/domain/: Track.cpp  Track.h  returnType.h
src/api/networking/: JSONResponse.cpp  JSONResponse.h  Request.cpp  Request.h  Response.cpp  Response.h  Server.cpp  Server.h  StreamResponse.cpp  StreamResponse.h
test/: JSONResponseTest.cpp  JSONResponseTest.h  TestExample.cpp  TestExample.h
tests/: Mocks.h
tests/functional/: api_tests.py
tests/integration/: MongoDaoTest.cpp  MongoDaoTest.h  TracksControllerTest.cpp  TracksControllerTest.h
tests/unit/: ControllerTest.cpp  ControllerTest.h  JSONResponseTest.cpp  JSONResponseTest.h  PingControllerTest.cpp  PingControllerTest.h  RequestTest.cpp  RequestTest.h  ServerTest.cpp  ServerTest.h  TrackTest.cpp  TrackTest.h  tests.cpp
